--- a/index.html
+++ b/index.html
@@ -86,13 +86,22 @@
           <h2 class="projects-title">Projects</h2>
           <ol>
             <li>
-              <a href="https://github.com/Kapsteroo/TeamfightTacticsAPP" class="projects-link"> Teamfight Tactics Application (in progress) </a>
+              <a
+                href="https://github.com/Kapsteroo/TeamfightTacticsAPP"
+                class="projects-link"
+              >
+                Teamfight Tactics Application (in progress)
+              </a>
             </li>
             <li>
-              <a href="https://github.com/Kapsteroo/CV" class="projects-link"> CV (done) </a>
+              <a href="https://github.com/Kapsteroo/CV" class="projects-link">
+                CV
+              </a>
             </li>
             <li>
-              <a href="https://github.com/Kapsteroo/Pio" class="projects-link"> Java simply game </a>
+              <a href="https://github.com/Kapsteroo/Pio" class="projects-link">
+                Java simply game
+              </a>
             </li>
           </ol>
         </section>
