--- a/index.html
+++ b/index.html
@@ -44,12 +44,7 @@
         <section class="skills">
           <h2 class="skills-title">Tech skills</h2>
           <ul class="skills-list">
-            <li class="skills-item" href="https://github.com/Kapsteroo">
-              GIT -
-              <a href="https://github.com/Kapsteroo" class="projects-link">
-                link
-              </a>
-            </li>
+            <li class="skills-item">GIT</li>
             <li class="skills-item">HTML</li>
             <li class="skills-item">CSS</li>
             <li class="skills-item">JavaScript</li>
