--- a/index.html
+++ b/index.html
@@ -152,14 +152,9 @@
         </section>
         <section class="processing-of-personal-data">
           <p class="bio-about">
-            I agree to the processing of personal data provided in this document
-            for realising the recruitment process pursuant to the Personal Data
-            Protection Act of 10 May 2018 (Journal of Laws 2018, item 1000) and
-            in agreement with Regulation (EU) 2016/679 of the European
-            Parliament and of the Council of 27 April 2016 on the protection of
-            natural persons with regard to the processing of personal data and
-            on the free movement of such data, and repealing Directive 95/46/EC
-            (General Data Protection Regulation)
+            I hereby give consent for my personal data included in my
+            application to be processed for the purposes of the recruitment
+            process.
           </p>
         </section>
       </div>
